--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-streamlit==1.38.0
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.5.1
-scipy==1.13.1
-matplotlib>=3.7.0
-seaborn>=0.12.0
-jupyterlab>=4.0.0
-notebook>=6.5.0
-ipykernel>=6.20.0
+streamlit>=1.36
+pandas>=2.2
+numpy>=2.0
+scikit-learn>=1.5
+scipy>=1.13
